Fixed font size on mobile.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ html {
     font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial,
         Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
     font-feature-settings: normal;
-    font-size: 105%;
+    font-size: 100%;
     color: #000;
 }
 
